# Lesion-Aware-Unified-Foundation-Model-for-Cross-Task-Retinal-Disease-Analysis-

./: .gitignore  CODE_REVIEW_ISSUES.md  DESIGN_FLAWS_AND_FIXES.md  TRAINING_GUIDE.md  check_status.py  implementation-plan.md  pyproject.toml  tech-spec.md
configs/: default.yaml  test.yaml
scripts/: download_retfound.py  evaluate.py  preprocess.py  run_all.py  train.py
src/retlesionuni/: __init__.py  config.py
src/retlesionuni/data/: __init__.py  ddr_dataset.py  joint_loader.py  odir_dataset.py  preprocess_ddr.py  preprocess_odir.py  preprocess_runner.py  transforms.py
src/retlesionuni/eval/: __init__.py  explainability.py  metrics.py
src/retlesionuni/losses/: __init__.py  asl_loss.py  contrastive_loss.py  dice_loss.py
src/retlesionuni/models/: __init__.py  ctam.py  encoder.py  heads.py  lpm.py  retlesionuni.py
src/retlesionuni/train/: __init__.py  checkpoint.py  scheduler.py  trainer.py
src/retlesionuni/utils/: __init__.py  logger.py
tests/: diagnose_issues.py  test_code_review_fixes.py  test_losses.py  test_model_forward.py  test_training_step.py
